[tool.poetry]
name = "maskedcrf"
version = "0.1.0"
description = ""
authors = ["z.belligoli <z.belligoli@anchromen.nl>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
torch = "^1.10.0"
tensorflow = "^2.7.0"
numpy = "^1.21.4"
ipykernel = "^6.6.0"
tensorflow-addons = "^0.15.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
